@@ -11,7 +11,7 @@ INCLUDES = -I$(top_srcdir)
 slurmd_LDADD = 					   \
 	$(top_builddir)/src/common/libdaemonize.la \
 	$(top_builddir)/src/api/libslurm.o $(DL_LIBS)	   \
-	$(PLPA_LIBS) \
+	$(PLPA_LIBS) $(HWLOC_LDFLAGS) $(HWLOC_LIBS) \
 	../common/libslurmd_common.la
 
 SLURMD_SOURCES = \
